--- a/src/components/Expenses/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate.css
@@ -1,4 +1,4 @@
-.expense-date{
+.expense-date {
     display: flex;
     flex-direction: column;
     width: 5.5rem;
@@ -9,21 +9,18 @@
     border-radius: 12px;
     align-items: center;
     justify-content: center;
-}
-.expense-date_month{
-    font-size: 1rem;
+  }
+  
+  .expense-date__month {
+    font-size: 0.75rem;
     font-weight: bold;
-    background-color: #2a2a2a;
-}
-
-.expense-date_year{
+  }
+  
+  .expense-date__year {
+    font-size: 0.75rem;
+  }
+  
+  .expense-date__day {
     font-size: 1.5rem;
     font-weight: bold;
-    background-color: #2a2a2a;
-}
-
-.expense-date_day{
-    font-size: 1rem;
-    font-weight: bold;
-    background-color: #2a2a2a;
-}
+  }
